<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.claseihc1.DrawingVista
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawingView"
        app:layout_constraintBottom_toTopOf="@+id/linear_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageButton
            android:id="@+id/btn_pencilMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/pencil_draw"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/ayuda"/>

        <ImageButton
            android:id="@+id/btn_pencilLess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/pencil_draw"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/palabras"/>

        <ImageButton
            android:id="@+id/btn_eraser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/eraser_draw" />

        <ImageButton
            android:id="@+id/btn_colorpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/palette"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/conf"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>